cbits/Bullet.h

void btGImpactCompoundShape_CompoundPrimitiveManager_get_primitive_triangle(void *c,int p0,void* p1); //method: get_primitive_triangle void ( ::btGImpactCompoundShape::CompoundPrimitiveManager::* )( int,::btPrimitiveTriangle & ) const
void btGImpactCompoundShape_CompoundPrimitiveManager_get_primitive_box(void *c,int p0,void* p1); //method: get_primitive_box void ( ::btGImpactCompoundShape::CompoundPrimitiveManager::* )( int,::btAABB & ) const
int btGImpactCompoundShape_CompoundPrimitiveManager_is_trimesh(void *c); //method: is_trimesh bool ( ::btGImpactCompoundShape::CompoundPrimitiveManager::* )(  ) const
void btGImpactCompoundShape_CompoundPrimitiveManager_m_compoundShape_set(void *c,void* a); //attribute: ::btGImpactCompoundShape * btGImpactCompoundShape_CompoundPrimitiveManager->m_compoundShape
void* btGImpactCompoundShape_CompoundPrimitiveManager_m_compoundShape_get(void *c); //attribute: ::btGImpactCompoundShape * btGImpactCompoundShape_CompoundPrimitiveManager->m_compoundShape
void* btGImpactCollisionAlgorithm_CreateFunc_new(); //constructor: CreateFunc  ( ::btGImpactCollisionAlgorithm::CreateFunc::* )(  ) 
void btGImpactCollisionAlgorithm_CreateFunc_free(void *c);
 
void* btGImpactCollisionAlgorithm_CreateFunc_CreateCollisionAlgorithm(void *c,void* p0,void* p1,void* p2); //method: CreateCollisionAlgorithm ::btCollisionAlgorithm * ( ::btGImpactCollisionAlgorithm::CreateFunc::* )( ::btCollisionAlgorithmConstructionInfo &,::btCollisionObject *,::btCollisionObject * ) 
void* gIM_BVH_DATA_new(); //constructor: GIM_BVH_DATA  ( ::GIM_BVH_DATA::* )(  ) 
void gIM_BVH_DATA_free(void *c);
 
void gIM_BVH_DATA_m_bound_set(void *c,void* a); //attribute: ::btAABB gIM_BVH_DATA->m_bound
void* gIM_BVH_DATA_m_bound_get(void *c); //attribute: ::btAABB gIM_BVH_DATA->m_bound
void gIM_BVH_DATA_m_data_set(void *c,int a); //attribute: int gIM_BVH_DATA->m_data
int gIM_BVH_DATA_m_data_get(void *c); //attribute: int gIM_BVH_DATA->m_data
void* gIM_BVH_DATA_ARRAY_new(); //constructor: GIM_BVH_DATA_ARRAY  ( ::GIM_BVH_DATA_ARRAY::* )(  ) 
void gIM_BVH_DATA_ARRAY_free(void *c);
 
void* gIM_BVH_TREE_NODE_new(); //constructor: GIM_BVH_TREE_NODE  ( ::GIM_BVH_TREE_NODE::* )(  ) 
void gIM_BVH_TREE_NODE_free(void *c);
 
void gIM_BVH_TREE_NODE_setDataIndex(void *c,int p0); //method: setDataIndex void ( ::GIM_BVH_TREE_NODE::* )( int ) 
int gIM_BVH_TREE_NODE_getEscapeIndex(void *c); //method: getEscapeIndex int ( ::GIM_BVH_TREE_NODE::* )(  ) const
int gIM_BVH_TREE_NODE_getDataIndex(void *c); //method: getDataIndex int ( ::GIM_BVH_TREE_NODE::* )(  ) const
void gIM_BVH_TREE_NODE_setEscapeIndex(void *c,int p0); //method: setEscapeIndex void ( ::GIM_BVH_TREE_NODE::* )( int ) 
int gIM_BVH_TREE_NODE_isLeafNode(void *c); //method: isLeafNode bool ( ::GIM_BVH_TREE_NODE::* )(  ) const
void gIM_BVH_TREE_NODE_m_bound_set(void *c,void* a); //attribute: ::btAABB gIM_BVH_TREE_NODE->m_bound
void* gIM_BVH_TREE_NODE_m_bound_get(void *c); //attribute: ::btAABB gIM_BVH_TREE_NODE->m_bound
void gIM_BVH_TREE_NODE_m_escapeIndexOrDataIndex_set(void *c,int a); //attribute: int gIM_BVH_TREE_NODE->m_escapeIndexOrDataIndex
int gIM_BVH_TREE_NODE_m_escapeIndexOrDataIndex_get(void *c); //attribute: int gIM_BVH_TREE_NODE->m_escapeIndexOrDataIndex
void* gIM_BVH_TREE_NODE_ARRAY_new(); //constructor: GIM_BVH_TREE_NODE_ARRAY  ( ::GIM_BVH_TREE_NODE_ARRAY::* )(  ) 
void gIM_BVH_TREE_NODE_ARRAY_free(void *c);
 
void* gIM_PAIR_new0(); //constructor: GIM_PAIR  ( ::GIM_PAIR::* )(  ) 
void* gIM_PAIR_new1(int p0,int p1); //constructor: GIM_PAIR  ( ::GIM_PAIR::* )( int,int ) 
void gIM_PAIR_free(void *c);
 
void gIM_PAIR_m_index1_set(void *c,int a); //attribute: int gIM_PAIR->m_index1
int gIM_PAIR_m_index1_get(void *c); //attribute: int gIM_PAIR->m_index1
void gIM_PAIR_m_index2_set(void *c,int a); //attribute: int gIM_PAIR->m_index2