Physics/Bullet/Raw/BulletCollision/Gimpact.chs

{#fun btGImpactCompoundShape_CompoundPrimitiveManager_get_primitive_triangle as btGImpactCompoundShape_CompoundPrimitiveManager_get_primitive_triangle    `( BtGImpactCompoundShape_CompoundPrimitiveManagerClass bc , BtPrimitiveTriangleClass p1 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ prim_index
, withBt* `p1'  -- ^ triangle
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#337>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactCompoundShape_CompoundPrimitiveManager_get_primitive_box as btGImpactCompoundShape_CompoundPrimitiveManager_get_primitive_box    `( BtGImpactCompoundShape_CompoundPrimitiveManagerClass bc , BtAABBClass p1 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ prim_index
, withBt* `p1'  -- ^ primbox
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#327>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactCompoundShape_CompoundPrimitiveManager_is_trimesh as btGImpactCompoundShape_CompoundPrimitiveManager_is_trimesh    `( BtGImpactCompoundShape_CompoundPrimitiveManagerClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#308>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactCompoundShape_CompoundPrimitiveManager_m_compoundShape_set    `( BtGImpactCompoundShape_CompoundPrimitiveManagerClass bc , BtGImpactCompoundShapeClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#308>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactCompoundShape_CompoundPrimitiveManager_m_compoundShape_get    `( BtGImpactCompoundShape_CompoundPrimitiveManagerClass bc )' =>     { withBt* `bc'  } ->  `BtGImpactCompoundShape'  mkBtGImpactCompoundShape* #}
-- * CreateFunc
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#215>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_CreateFunc_new as btGImpactCollisionAlgorithm_CreateFunc    {  } -> `BtGImpactCollisionAlgorithm_CreateFunc' mkBtGImpactCollisionAlgorithm_CreateFunc* #}
{#fun btGImpactCollisionAlgorithm_CreateFunc_free    `( BtGImpactCollisionAlgorithm_CreateFuncClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#216>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_CreateFunc_CreateCollisionAlgorithm as btGImpactCollisionAlgorithm_CreateFunc_CreateCollisionAlgorithm    `( BtGImpactCollisionAlgorithm_CreateFuncClass bc , BtCollisionAlgorithmConstructionInfoClass p0 , BtCollisionObjectClass p1 , BtCollisionObjectClass p2 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ ci
, withBt* `p1'  -- ^ body0
, withBt* `p2'  -- ^ body1
 } ->  `BtCollisionAlgorithm'  mkBtCollisionAlgorithm* #}
-- * GIM_BVH_DATA
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#80>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_BVH_DATA_new as gIM_BVH_DATA    {  } -> `GIM_BVH_DATA' mkGIM_BVH_DATA* #}
{#fun gIM_BVH_DATA_free    `( GIM_BVH_DATAClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#81>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_BVH_DATA_m_bound_set    `( GIM_BVH_DATAClass bc , BtAABBClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#81>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_BVH_DATA_m_bound_get    `( GIM_BVH_DATAClass bc )' =>     { withBt* `bc'  } ->  `BtAABB'  mkBtAABB* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#82>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_BVH_DATA_m_data_set    `( GIM_BVH_DATAClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#82>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_BVH_DATA_m_data_get    `( GIM_BVH_DATAClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
-- * GIM_BVH_DATA_ARRAY
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#131>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_BVH_DATA_ARRAY_new as gIM_BVH_DATA_ARRAY    {  } -> `GIM_BVH_DATA_ARRAY' mkGIM_BVH_DATA_ARRAY* #}
{#fun gIM_BVH_DATA_ARRAY_free    `( GIM_BVH_DATA_ARRAYClass bc )' =>     { withBt* `bc'  } -> `()' #}
-- * GIM_BVH_TREE_NODE
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#93>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_BVH_TREE_NODE_new as gIM_BVH_TREE_NODE    {  } -> `GIM_BVH_TREE_NODE' mkGIM_BVH_TREE_NODE* #}
{#fun gIM_BVH_TREE_NODE_free    `( GIM_BVH_TREE_NODEClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#122>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_BVH_TREE_NODE_setDataIndex as gIM_BVH_TREE_NODE_setDataIndex    `( GIM_BVH_TREE_NODEClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#104>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_BVH_TREE_NODE_getEscapeIndex as gIM_BVH_TREE_NODE_getEscapeIndex    `( GIM_BVH_TREE_NODEClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#115>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_BVH_TREE_NODE_getDataIndex as gIM_BVH_TREE_NODE_getDataIndex    `( GIM_BVH_TREE_NODEClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#110>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_BVH_TREE_NODE_setEscapeIndex as gIM_BVH_TREE_NODE_setEscapeIndex    `( GIM_BVH_TREE_NODEClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#98>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_BVH_TREE_NODE_isLeafNode as gIM_BVH_TREE_NODE_isLeafNode    `( GIM_BVH_TREE_NODEClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#89>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_BVH_TREE_NODE_m_bound_set    `( GIM_BVH_TREE_NODEClass bc , BtAABBClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#89>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_BVH_TREE_NODE_m_bound_get    `( GIM_BVH_TREE_NODEClass bc )' =>     { withBt* `bc'  } ->  `BtAABB'  mkBtAABB* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#91>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_BVH_TREE_NODE_m_escapeIndexOrDataIndex_set    `( GIM_BVH_TREE_NODEClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#91>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_BVH_TREE_NODE_m_escapeIndexOrDataIndex_get    `( GIM_BVH_TREE_NODEClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
-- * GIM_BVH_TREE_NODE_ARRAY
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#136>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_BVH_TREE_NODE_ARRAY_new as gIM_BVH_TREE_NODE_ARRAY    {  } -> `GIM_BVH_TREE_NODE_ARRAY' mkGIM_BVH_TREE_NODE_ARRAY* #}
{#fun gIM_BVH_TREE_NODE_ARRAY_free    `( GIM_BVH_TREE_NODE_ARRAYClass bc )' =>     { withBt* `bc'  } -> `()' #}
-- * GIM_PAIR
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#42>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_PAIR_new0 as gIM_PAIR0    {  } -> `GIM_PAIR' mkGIM_PAIR* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#51>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_PAIR_new1 as gIM_PAIR1    {   `Int' ,  `Int'  } -> `GIM_PAIR' mkGIM_PAIR* #}
{#fun gIM_PAIR_free    `( GIM_PAIRClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#40>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_PAIR_m_index1_set    `( GIM_PAIRClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#40>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_PAIR_m_index1_get    `( GIM_PAIRClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#41>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun gIM_PAIR_m_index2_set    `( GIM_PAIRClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
